# TRAXOVO_V1

./: .deployignore  .deployment_cache.pkl  .dockerignore  .env.nexus_agent  .env.optimal  .env.production  .env.template  .gitignore  .lazy_imports.pkl  .nexus_agent_sealed  .nexus_api_discovery  .nexus_blocked_actions  .nexus_broadcast_config  .nexus_confirmation_config  .nexus_control_mount  .nexus_cross_sync_config  .nexus_dashboard_wiring  .nexus_device_routing  .nexus_encryption  .nexus_fallback_protocols  .nexus_firewall  .nexus_global_intelligence_config  .nexus_groundworks_rebuild  .nexus_ids  .nexus_infinity_evolution_state  .nexus_integration_scan  .nexus_internal_host  .nexus_kaizen_bridge_active  .nexus_login_api_linking  .nexus_master_control_active  .nexus_monitoring  .nexus_navigation_fixed  .nexus_onboarding_config  .nexus_override_active  .nexus_plug_and_play_export  .nexus_production_deployment  .nexus_production_mode  .nexus_quantum_security_full  .nexus_readiness_validation  .nexus_replit_integration_state  (+1307 more)
.deployment_cache/: build_manifest.json
0_BOOTSTRAP/: README.md
1_UI_COMPONENTS/: dashboard_tab_definitions.json  dashboard_tab_definitions.min.json
4_QA_AUTOMATION/: qa_metadata.min.json  qa_trigger.py
5_DATA/: foundation_costs_metadata.min.json
FIX_READY/: FailsafePatchNotes.md  RouteConsolidationPlan.md  critical_route_fixes.py
QA_REPORT/: GENIUS_FIX_REPORT.json  dashboard_health.json
QQ_Full_Intelligence_Transfer_20250604_152814/: master_package.json
QQ_Full_Intelligence_Transfer_20250604_152854/: README.md  master_package.json
active/: kaizen_daily_sync.py  main.py  simple_app.py
admin_user_crud/: admin_user_crud.py
agents/: __init__.py  agent_controller.py  driver_classifier_agent.py  geo_validator_agent.py  output_formatter_agent.py  report_generator_agent.py  samsara_sync_agent.py  weekly_driver_summary_agent.py
agi_burn_suite/: burn_in_test.js
agi_evolution/: agent_relay.js  sovereign_coordinator.js  telemetry_monitor.js
agi_transcendence/: context_memory.js  hypermesh_router.js
anomaly_detector/: anomaly_detector.py
archived_modules/: aemp_news_integration.py  agent_sync_status.py  agi_analytics_engine.py  agi_asset_lifecycle_management.py  agi_engine.py  agi_module_enhancer.py  agi_workflow_automation.py  ai_debug_assistant.py  ai_fleet_assistant.py  ai_ops_engine.py  app_fixed.py  application.py  asi_browser_automation.py  asi_deployment_sync.py  asi_enhanced_debugger.py  asi_executive_dashboard.py  asi_module_validator.py  asi_testing_automation.py  attendance_dashboard.py  attendance_processor.py  auth_system.py  authentic_data_loader.py  authentic_data_service.py  auto_daily_report.py  automated_attendance_workflow.py  automated_billing_workflow.py  automated_report_importer.py  automated_testing_suite.py  automated_twilio_setup.py  automation_workflow_engine.py  autonomous_cost_intelligence.py  autonomous_demo_dashboard.py  autonomous_deployment_puppeteer.py  autonomous_ux_analyzer.py  check_billing_sheets.py  cli.py  commercial_scaling_engine.py  comprehensive_billing_engine.py  continuous_improvement_engine.py  controller_financial_dashboard.py  (+208 more)
archived_modules_20250604_153141/: app.py  app_production_ready.py  deployment_acceleration.py  deployment_termination_controller.py  qq_asi_deployment_validator.py  qq_asi_excellence_visual_fix.py  qq_autonomous_analysis_engine.py  qq_autonomous_visual_scaling_optimizer.py  qq_bleeding_edge_map_blueprint.py  qq_chatgpt_chat_scraper.py  qq_codebase_intelligence_engine.py  qq_comprehensive_autonomous_integration_sweep.py  qq_comprehensive_internal_audit_generator.py  qq_contextual_productivity_nudges.py  qq_deployment_orchestrator.py  qq_enhanced_asset_tracking_map.py  qq_enhanced_billing_processor.py  qq_fast_deployment_check.py  qq_full_intelligence_transfer.py  qq_intelligent_puppeteer_autonomous.py  qq_kaizen_genius_elite_autonomous_audit_system.py  qq_master_zone_payroll_system.py  qq_mobile_optimization_module.py  qq_parallel_responsive_optimizer.py  qq_production_optimization_engine.py  qq_routing_audit_tool.py  qq_traxovo_dashboard_sync_control.py  qq_ui_ux_consistency_engine.py  qq_ui_ux_patch_applicator.py  qq_ui_ux_validation_dashboard.py  qq_visual_optimization_engine.py  traxovo_dna_clone.py
attached_assets/: 01 - DFW APR 2025.csv  03 - WT MAR 2025.csv  2022-008 EQMO. BILLING ALLOCATIONS - APRIL 2025 (TR-FINAL REVISIONS BY 05.15.2025).xlsx  2023-032 EQMO. BILLING ALLOCATIONS - APRIL 2025.xlsx  API keys - OpenAI API_1750093127998.heic  AUTO FRINGE 2024 (BW UPDATED VALUES)_12.06.2024.xlsx  AssetsTimeOnSite (3).csv  AssetsTimeOnSite (8).csv  Copy of EQMO. BILLING ALLOCATIONS - APRIL 2025 (TR-FINAL REVISIONS BY 05.15.2025).xlsx  DAILY DRIVER LATE _ EARLY END _ NOT ON JOB REPORTS _ TUESDAY 5_13 & WEDNESDAY 5_14.msg  DailyUsage.csv  EQ PROFIT REPORT_01.01.25-04.30.25.xlsx  EQMO. BILLING ALLOCATIONS - APRIL 2025 (TR-FINAL REVISIONS BY 05.15.2025).xlsx  EQMO. BILLING ALLOCATIONS - APRIL 2025 2024-025 allocated AJR.xlsx  FleetUtilization.xlsx  GAUGE API PULL 1045AM_05.15.2025.json  JDD%20LEADS%20AND%20COMMISSIONS%202019-20%20(version%201)(AutoRecovered).xlsx  Job Table-MARCH 2025 HOURS.xlsx  KAIZEN_UNLOCK_LOG_SUMMARY_1749115107633.md  MEP_06.03.2025.md  Pasted--BEGIN-GENOPS-SMARTS-HARVEST-DEPLOY-CONTEXT-Workspace-TRAXOVO-is-4-GB-loaded-with-r-1748612480317.txt  Pasted--BEGIN-GENOPS-ULTIMATE-ATTENDANCE-MODULE-DEPLOY-OBJECTIVE-Consolidate-and-perfect-the-Att-1748624667208.txt  Pasted--Comments-added-to-guide-you-as-you-generate-each-page-Now-here-are-all-6-React-page-compone-1748844230389.txt  (+154 more)
backups/: audit_trail.db
exports/PLUG_AND_PLAY_TEST_20250606_203724/core/: nexus_core.py  nexus_singularity_deployment.py  pyproject.toml
traxovo_dna_backup_20250604_094841/config/: package.json  pyproject.toml
(+3281 files in other folders)
