[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-migrate>=4.1.0",
    "openai>=1.78.1",
    "click>=8.2.0",
    "sqlalchemy>=2.0.41",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "sendgrid>=6.12.2",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "oauthlib>=3.2.2",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "numpy>=2.2.5",
    "fpdf>=1.7.2",
    "reportlab>=4.4.1",
    "pillow>=11.2.1",
    "xlrd>=2.0.1",
    "pytz>=2025.2",
    "python-levenshtein>=0.27.1",
    "fuzzywuzzy>=0.18.0",
    "agents>=1.4.0",
    "pyyaml>=6.0.2",
    "formulas>=1.2.10",
    "beautifulsoup4>=4.13.4",
    "watchdog>=6.0.0",
    "pypdf2>=3.0.1",
    "tabula-py>=2.10.0",
    "psutil>=7.0.0",
]
