[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traxovo-watson-intelligence"
version = "1.0.0"
description = "Advanced autonomous system intelligence platform with Watson Command Console"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TRAXOVO Watson Intelligence", email = "watson@traxovo.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Enterprise",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
]

dependencies = [
    "flask-login>=0.6.3",
    "flask>=2.3.3",
    "gunicorn>=21.2.0",
    "openai>=1.86.0",
    "werkzeug>=2.3.7",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/traxovo/watson-intelligence"
Documentation = "https://docs.traxovo.com/watson"
Repository = "https://github.com/traxovo/watson-intelligence.git"
Issues = "https://github.com/traxovo/watson-intelligence/issues"

[project.scripts]
watson-start = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "*.tests", "*.tests.*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
