[project]
name = "traxovo-enterprise"
version = "1.0.0"
description = "TRAXOVO Enterprise Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.41",
    "click>=8.2.0",
    "python-dateutil>=2.8.2",
]
